# docs/swagger.json
@@ -9,6 +9,20 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
+        "/lan": {
+            "get": {
+                "description": "国际化测试",
+                "tags": [
+                    "国际化测试接口"
+                ],
+                "summary": "国际化",
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            }
+        },
         "/ping": {
             "get": {
                 "description": "系统状态检查",
